k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: supportops
  labels:
    app: supportops-toolkit
